// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`\`@example\` tests > ABS(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`\`@example\` tests > ACOS(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`\`@example\` tests > ACOSH(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`\`@example\` tests > ADD(1, 2) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;

exports[`\`@example\` tests > ASIN(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 1.5707963267948966 │
└───┴────────────────────┘
"
`;

exports[`\`@example\` tests > ASINH(1) 1`] = `
"
┌───┬───────────────────┐
│   │ A                 │
├───┼───────────────────┤
│ 1 │ 0.881373587019543 │
└───┴───────────────────┘
"
`;

exports[`\`@example\` tests > ATAN(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.7853981633974483 │
└───┴────────────────────┘
"
`;

exports[`\`@example\` tests > ATAN2(1, 1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.7853981633974483 │
└───┴────────────────────┘
"
`;

exports[`\`@example\` tests > ATANH(1) 1`] = `
"
┌───┬──────────┐
│   │ A        │
├───┼──────────┤
│ 1 │ Infinity │
└───┴──────────┘
"
`;

exports[`\`@example\` tests > CBRT(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`\`@example\` tests > CEIL(1.5) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 2 │
└───┴───┘
"
`;

exports[`\`@example\` tests > CLZ32(1) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 31 │
└───┴────┘
"
`;

exports[`\`@example\` tests > COS(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.5403023058681398 │
└───┴────────────────────┘
"
`;

exports[`\`@example\` tests > COSH(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 1.5430806348152437 │
└───┴────────────────────┘
"
`;

exports[`\`@example\` tests > DIVIDE(6, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 2 │
└───┴───┘
"
`;

exports[`\`@example\` tests > EXP(1) 1`] = `
"
┌───┬───────────────────┐
│   │ A                 │
├───┼───────────────────┤
│ 1 │ 2.718281828459045 │
└───┴───────────────────┘
"
`;

exports[`\`@example\` tests > FLOOR(1.5) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`\`@example\` tests > IMUL(1, 2) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 2 │
└───┴───┘
"
`;

exports[`\`@example\` tests > LOG(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`\`@example\` tests > LOG10(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`\`@example\` tests > MOD(5, 2) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`\`@example\` tests > MULTIPLY(2, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 6 │
└───┴───┘
"
`;

exports[`\`@example\` tests > PI() 1`] = `
"
┌───┬───────────────────┐
│   │ A                 │
├───┼───────────────────┤
│ 1 │ 3.141592653589793 │
└───┴───────────────────┘
"
`;

exports[`\`@example\` tests > POWER(2, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 8 │
└───┴───┘
"
`;

exports[`\`@example\` tests > PRODUCT(2, 3, 4) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 24 │
└───┴────┘
"
`;

exports[`\`@example\` tests > ROUND > ROUND(1.5) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 2 │
└───┴───┘
"
`;

exports[`\`@example\` tests > ROUND > ROUND(PI(), 2) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ 3.14 │
└───┴──────┘
"
`;

exports[`\`@example\` tests > SIN(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.8414709848078965 │
└───┴────────────────────┘
"
`;

exports[`\`@example\` tests > SINH(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 1.1752011936438014 │
└───┴────────────────────┘
"
`;

exports[`\`@example\` tests > SQRT(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`\`@example\` tests > SUBTRACT(2, 1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`\`@example\` tests > SUM(1, 2, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 6 │
└───┴───┘
"
`;

exports[`\`@example\` tests > TAN(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 1.5574077246549023 │
└───┴────────────────────┘
"
`;

exports[`\`@example\` tests > TANH(1) 1`] = `
"
┌───┬────────────────────┐
│   │ A                  │
├───┼────────────────────┤
│ 1 │ 0.7615941559557649 │
└───┴────────────────────┘
"
`;

exports[`\`@example\` tests > TAU() 1`] = `
"
┌───┬───────────────────┐
│   │ A                 │
├───┼───────────────────┤
│ 1 │ 6.283185307179586 │
└───┴───────────────────┘
"
`;

exports[`\`@example\` tests > TRUNC(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;
